# nnn

./: pyproject.toml
first_django_web/: db.sqlite3  manage.py
first_django_web/first_django_web/: asgi.py  settings.py  urls.py  wsgi.py
first_django_web/members/: models.py  views.py
first_django_web/members/migrations/: 0001_initial.py  0002_rename_fistname_member_firstname.py  0003_alter_member_joined_date.py
first_django_web/members/static/members/: myfirst.css
first_django_web/members/templates/: myfist.html
